Fix vertical center alignment issue with text and image. (#129)

--- a/src/components/PoolOverview.scss
+++ b/src/components/PoolOverview.scss
@@ -51,6 +51,7 @@ div.poolOverview {
 
     & > img {
       margin-right: 4px;
+      vertical-align: text-top;
     }
   }
 
