--- a/src/components/Web3Status.scss
+++ b/src/components/Web3Status.scss
@@ -17,9 +17,7 @@ div.walletStatus {
   .hasAccount img {
     margin-right: 0;
     margin-left: 8px;
-  }
-  .hasAccount span {
-    vertical-align: top;
+    vertical-align: text-bottom;
   }
   .noAccount {
     height: 40px;
